# TI-Python-Module

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  __err.py  cmath.py  example.py  setup.cfg  setup.py  test.md  ti_draw.py  ti_hub.py  ti_rover.py  ti_system.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project-part.md  typo-report.md
.github/workflows/: project-issue-labeler.yml  project_column_manager.yml  python-check.yml  python-publish.yml  test-action.yml  test-workflow.yml
ti-python-module/: ti_system.py
ti_python/: __init__.py  ti_hub.py
ti_python_module/: __init__.py  err.py  file_handler.py  ti_draw.py  ti_hub.py  ti_plotlib.py  ti_rover.py  ti_system.py
