[metadata]
name = TI-Python-Module-VampireTechnologyLord
version = 0.7.0
author = Elias Freund
author_email = elias.freund@ewe.com
description = A package to add support for the Texas Instruments Rover and Hub code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VampireTechnologyLord/TI-Python-Module
project_urls =
    Bug Tracker = https://github.com/VampireTechnologyLord/TI-Python-Module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent